# svg-to-3mf

./: .gitignore  README.md  colors.json  face-down-ex.3mf  face-up-ex.3mf  pyproject.toml  test_round_00.3mf  test_round_04.3mf
examples/: basic_rect_text.3mf  basic_rect_text.from_cli.3mf
scripts/: make_basic_3mf.py
src/svg_to_3mf/: __init__.py  cli.py  color_mapping.py  config.py  pipeline.py
tests/: test_cli.py  test_color_mapping.py
